# yew-tailwindcss

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  trunk.toml  turbo.json  vercel.json
.cargo/: config.toml
.github/workflows/: checks.yml
apps/web/: Cargo.toml  app.rs  package.json  postcss.config.js  tailwind.config.js
apps/web/components/: mod.rs  nav.rs
apps/web/pages/: about.rs  home.rs  mod.rs
apps/web/public/: index.html
scripts/: build.sh  format.sh  install.sh
src/: main.rs  router.rs
src/assets/: manifest.json  site.webmanifest
src/components/: nav.rs
src/pages/: about.rs  home.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
