[package]
name = "xtask"
version = "0.1.0"
description = "https://github.com/matklad/cargo-xtask/"
license = "MPL-2.0"
edition = "2021"

publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"
bench = false

[dependencies]
xtask-wasm = { version = "0.1.10", features = ["wasm-opt"] }
env_logger = "0.9"
log = "0.4"
